# claude-harness

./: .gitignore  CLAUDE.md  README.md  claude-usage-report-2026-06-30.md  conftest.py  ledger.jsonl
harness-combined/: .gitignore  CLAUDE.md  README.md  REVIEW-FINDINGS-2026-07-05.md  conftest.py  dag.py  dry_run.py  flaky_detect.py  health.py  learnings.py  memory.py  mode_branch.py  models.py  panel_detect.py  pyproject.toml  requirements.txt  sarif_output.py  server.py  setup.sh  spec_coverage.py  ticket.py  ticket_deps.py  ticket_templates.py
harness-combined/.claude-plugin/: plugin.json
harness-combined/.tickets/: .active
harness-combined/agents/: craft.md  critic.md  requirements-analyst.md
harness-combined/commands/: abandon.md  autopilot.md  bisect.md  build.md  cancel.md  changelog.md  critique.md  deliver.md  doctor.md  export.md  flaky.md  gate.md  harvest-learnings.md  health.md  implement.md  init.md  merge.md  milestone.md  problem.md  refine.md  reopen.md  replan.md  requirements-review.md  requirements.md  review.md  rollback.md  solution.md  sprint.md  status.md  suggest.md  ticket-list.md  ticket-status.md  usage-report.md  velocity.md  write-spec.md
harness-combined/context/: critic-brief.md  harness-reference.md  score-spec.md  spec-remediation.md
harness-combined/gates/: __init__.py  _baseline.py  _scope.py  comment_deduplicator.py  commit_lint.py  config.py  coverage.py  critic_finding_parser.py  critic_reconciler.py  dep_audit.py  doctor.py  finding.py  finding_parser.py  gate_graph.py  go.py  incremental_scope.py  log_writer.py  pr_commenter.py  pr_detector.py  python.py  red_gate.py  repair_integrity.py  rust.py  sast.py  sast_bandit.py  sast_models.py  sast_semgrep.py  sast_util.py  scheduler.py  secrets.py  spec_remediate.py  typescript.py
harness-combined/hooks/: _common.py  hooks.json  post_write_gate.py  pre_ticket_diff.py  pre_write_guard.py  stop_full_gate.py  ticket_commit_guard.py
harness-combined/tests/: test_0002_progress_checklist.py  test_0003_squash_delivery_docs.py  (+122 more)
harness-full/: .gitignore  Makefile  README.md  pyproject.toml
(+780 files in other folders)
