[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "harness-full"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "bandit>=1.7.0",
    "pytest>=8.0.0",
]

[project.optional-dependencies]
tree-sitter = ["tree-sitter-languages>=1.10.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["harness*"]
